--- a/src/main/resources/templates/user/modify.html
+++ b/src/main/resources/templates/user/modify.html
@@ -3,13 +3,17 @@
 Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this template
 -->
-<html>
-    <head>
-        <title>TODO supply a title</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity6">
+    <head th:replace="~{ layout/fragments :: head }">
+        <title>Bienes Raices</title>
     </head>
     <body>
-        <div>TODO write content</div>
+        <header th:replace="~{layout/fragments :: header}"></header>
+        
+         <section th:replace="~{user/fragments :: modifyUser}"></section>
+        <footer th:replace="~{ layout/fragments :: footer }"/>
+
     </body>
 </html>
