--- a/src/main/resources/templates/layout/fragments.html
+++ b/src/main/resources/templates/layout/fragments.html
@@ -17,7 +17,7 @@
     </head>
 
     <body>
-    <header th:fragment="header" class="header">
+        <header th:fragment="header" class="header">
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 <div class="container-fluid">
                     <a class="navbar-brand" th:href="@{/}">Bienes Raices</a>
@@ -39,7 +39,7 @@
                             <li class="nav-item">
                                 <a class="nav-link" th:href="@{/contact}">Contacto</a>
                             </li>
-                            <li class="nav-item dropdown" sec:authorize="hasRole('ROLE_ADMIN')">
+                            <li class="nav-item dropdown" >
                                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownAdmin" role="button"
                                    data-bs-toggle="dropdown" aria-expanded="false">
                                     Admin
@@ -49,27 +49,47 @@
                                     <li><a class="dropdown-item" th:href="@{/seller/sellerList}">Vendedores</a></li>
                                     <li><a class="dropdown-item" th:href="@{/reportes/principal}">Reportes</a></li>
                                 </ul>
+
                             </li>
                         </ul>
-                        <ul class="navbar-nav ml-auto"> <!-- Añadiendo ml-auto para mover el contenido a la derecha -->
-                            <li class="nav-item dropdown mr-5">
-                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownProfile" role="button"
-                                   data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    
-                                    <img th:src="@{/img/ejemplo.jpg}" height="40" class="rounded-circle"/>
-                                   
-                                    <span sec:authentication='name'>Johanna</span>
-                                </a>
-                                <div class="dropdown-menu p-2" aria-labelledby="navbarDropdownProfile">
-                                  
-                                    <a class="dropdown-item"th:href="@{  /profile/perfil}">Perfil</a>
-                                    <div class="dropdown-divider"></div>
-                                    <form method="post" th:action='@{/logout}'>
-                                        <button class="dropdown-item btn btn-sm" type="submit">Logout</button>
-                                    </form>
-                                </div>
+                        <ul class="navbar-nav">
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Seleccionar Lenguaje</a>
+                                <ul class="dropdown-menu dropdown-menu-dark">
+                                    <li><a class="dropdown-item"  th:href="@{/(lang=es)}">ES</a></li>
+                                    <li><a class="dropdown-item" th:href="@{/(lang=en)}">EN</a></li>
+                                </ul>
                             </li>
                         </ul>
+                        <div class="collapse navbar-collapse" id="navbarNav">
+                            <ul class="navbar-nav me-auto">
+
+                            </ul>
+                            <ul class="navbar-nav ml-auto align-items-center">
+                    
+                                <li class="nav-item" sec:authorize='!isAuthenticated()'> 
+                                    <a href="/signIn" class="nav-link">Sign In</a>
+                                </li>
+                                <li class="nav-item" sec:authorize='!isAuthenticated()'> 
+                                    <a href="/signUp/new" class="nav-link">Sign Up</a>
+                                </li>
+                                <li  sec:authorize='isAuthenticated()'class="nav-item dropdown mr-5">
+                                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownProfile" role="button"
+                                       data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                       <img  th:src="${#authentication.principal.image} == null ? 'https://urgenciesveterinaries.com/wp-content/uploads/2023/09/survet-gato-caida-pelo-01.jpeg' : ${#authentication.principal.image}" height="40" style="object-fit: cover; aspect-ratio: 1/1;" class="rounded-circle"/>
+                                      
+                                        <span sec:authentication='name'>Johanna</span>
+                                    </a>
+                                    <div class="dropdown-menu p-2" aria-labelledby="navbarDropdownProfile">
+                                        <a class="dropdown-item" th:href="@{/profile/perfil}">Perfil</a>
+                                        <div class="dropdown-divider"></div>
+                                        <form method="post" th:action='@{/logout}'>
+                                            <button class="dropdown-item btn btn-sm" type="submit">Logout</button>
+                                        </form>
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </nav>
